# pixie

./: .gitignore  CHANGELOG.md  default.nix  haskell-nix.cabal  release.nix  shell.nix
nix/: default.nix  pixie.nix
src/: Env.hs  Eval.hs  Infer.hs  Lexer.hs  Main.hs  NanoParsec.hs  Parser.hs  Pretty.hs  Type.hs
