cabal-version: >=1.10
license:       MIT
name:          pixie
version:       0.0.0
build-type:    Simple

executable pixie
  hs-source-dirs:   src
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:
      base
    , containers
    , mtl
    , parsec
    , pretty
    , repline
    , text
    , transformers

  other-modules:
    Env
    Eval
    Infer
    Lexer
    Parser
    Pretty
    Syntax
    Type
